operator/config/samples/gateway/gateway-class.yaml
# GatewayClass
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: inference-gateway-class
spec:
  controllerName: gateway.networking.k8s.io/gateway-controller
