operator/config/samples/gateway/http-route.yaml
# HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mistral-inference-route
  namespace: default
spec:
  parentRefs:
    - name: inference-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /v1/completions
      backendRefs:
        - group: inference.networking.x-k8s.io
          kind: InferenceModel
          name: mistral-inference-model
          port: 80
